<resources>
    <string name="app_name">Footy Quiz</string>
    <string name="name_hint">Enter name</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="score">Score : 0</string>
    <string name="try_again">Begin Again</string>
    <string name="name">Name Here</string>
    <string name="qs">This is qs 1 Select 1 answer out of 4</string>
    <string name="next_qs">Next Question</string>
    <string name="ans1">Answer 1</string>
    <string name="ans2">Answer 2</string>
    <string name="ans3">Answer 3</string>
    <string name="ans4">Answer 4</string>
</resources>